# debian_installer_ts6000

./: .gitignore  README.md  functions.py  generate_bookworm.sh  install.py  make_bookworm.sh  network-setup.py  pyproject.toml  update.py
ansible/: ansible.cfg  initial.yml  setup.yml
ansible/group_vars/: all.yml
ansible/inventory/: local.yml  production  staging
ansible/roles/TeraStation/tasks/: main.yml
ansible/roles/TeraStationV3/files/: 50-miconapl-lcd  70-micon.rules  micon-shutdown  micon.py  miconapl.service  set-led  update-lcd  update_boot.sh
ansible/roles/TeraStationV3/handlers/: main.yml
ansible/roles/TeraStationV3/tasks/: main.yml
ansible/roles/capture-packet/files/: cores.sh  merge_csv.py  merge_csv.sh  packet-capture.sh  pcap2csv.cron  pcap2csv.py  pcap2csv.sh  pcap_rotate.sh  pcap_server.key  send-pcap.sh
ansible/roles/capture-packet/tasks/: main.yml
ansible/roles/capture-packet/templates/: packet-capture.conf.j2
ansible/roles/cockpit/tasks/: main.yml
ansible/roles/dns-query-count/files/: dns-query-count
ansible/roles/dns-query-count/tasks/: main.yml
ansible/roles/dns/handlers/: main.yml
ansible/roles/dns/tasks/: main.yml
ansible/roles/dns/templates/: intercept.zone.j2  named.conf.local.j2  named.conf.options.j2
src/: disp-lcd.sh  grub.cfg  hotswap.service  in_target.sh  late_cmds.sh  micon_boot.service  micon_shutdown.sh  preseed.cfg  set-led.sh  update-lcd.sh
src/initrd/: preseed.cfg
src/micon_scripts/: micon_shutdown.py  micon_startup.py
src/scripts/: in_target.sh  late_cmds.sh
tool/: deploy.sh
(+59 files in other folders)
